tests/neg-scalajs/package-object-extends-js-any.scala
import scala.scalajs.js
import scala.scalajs.js.annotation.*

package object jspackage extends js.Object // error
